--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -126,6 +126,8 @@ dependency_overrides:
 
 dev_dependencies:
   flutter_lints: 4.0.0
+  integration_test: 
+    sdk: flutter
   lints: 4.0.0
   flutter_test:
     sdk: flutter
