--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.mycompany.inkedin</string>
+	<string>com.uricsc305.inkedin</string>
 	<key>PROJECT_ID</key>
 	<string>inkedin-4fc34</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:282840658029:ios:8926f9df9e625296cecf64</string>
+	<string>1:282840658029:ios:eaf0e9b78acf71c5cecf64</string>
 </dict>
 </plist>
